bug fix/ fixed bug of applications not showing on log in

--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -10,17 +10,14 @@
     .inner-container__text {
       width: 60%;
       height: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-direction: column;
       .text__title {
         font-size: 4rem;
         color: $text-light;
         width: 100%;
         font-weight: 500;
         height: 33%;
-        @include flex-center;
+        display: flex;
+        align-items: center;
       }
       .text__subtitle {
         font-size: 2.2rem;
